--- a/src/app/pages/products/legos/legos.component.html
+++ b/src/app/pages/products/legos/legos.component.html
@@ -109,6 +109,62 @@
     </div>
   </div>
 
+  <section class="bar background-gray  no-mb padding-big text-center-sm">
+    <div class="container">
+      <div class="row">
+        <div class="heading text-justify">
+          <h1>vehiculos</h1>
+        </div>
+        <div class="embed-container col-md-4">
+          <iframe src="https://myhub.autodesk360.com/ue2a9b90d/shares/public/SHabee1QT1a327cf2b7a7e1816382c9caa87?mode=embed" width="580" height="326" allowfullscreen scrolling="no" marginheight="0" marginwidth="0" frameborder="0"></iframe>
+        </div>
+        <div class="embed-container col-md-4">
+          <iframe src="https://myhub.autodesk360.com/ue2a9b90d/shares/public/SHabee1QT1a327cf2b7a7fea4de478c1f346?mode=embed" width="580" height="326" allowfullscreen scrolling="no" marginheight="0" marginwidth="0" frameborder="0"></iframe>
+        </div>
+        <div class="embed-container col-md-4">
+          <iframe src="https://myhub.autodesk360.com/ue2a9b90d/shares/public/SHabee1QT1a327cf2b7a55bd010144f8774b?mode=embed" width="580" height="326" allowfullscreen scrolling="no" marginheight="0" marginwidth="0" frameborder="0"></iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="bar background-gray  no-mb padding-big text-center-sm">
+    <div class="container">
+      <div class="row">
+        <div class="heading text-justify">
+          <h1>vehiculos</h1>
+        </div>
+        <div class="embed-container col-md-4">
+          <iframe src="https://myhub.autodesk360.com/ue2a9b90d/shares/public/SHabee1QT1a327cf2b7a9a90e0c4309faac1?mode=embed" width="580" height="326" allowfullscreen scrolling="no" marginheight="0" marginwidth="0" frameborder="0"></iframe>
+        </div>
+        <div class="embed-container col-md-4">
+          <iframe src="https://myhub.autodesk360.com/ue2a9b90d/shares/public/SHabee1QT1a327cf2b7a5a2e5bc713ade7fc?mode=embed" width="580" height="326" allowfullscreen scrolling="no" marginheight="0" marginwidth="0" frameborder="0"></iframe>
+        </div>
+        <div class="embed-container col-md-4">
+          <iframe src="https://myhub.autodesk360.com/ue2a9b90d/shares/public/SHabee1QT1a327cf2b7a6057601defd1a9e5?mode=embed" width="580" height="326" allowfullscreen scrolling="no" marginheight="0" marginwidth="0" frameborder="0"></iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="bar background-gray  no-mb padding-big text-center-sm">
+    <div class="container">
+      <div class="row">
+        <div class="heading text-justify">
+          <h1>Maquinaria</h1>
+        </div>
+        <div class="embed-container col-md-4">
+          <iframe src="https://myhub.autodesk360.com/ue2a9b90d/shares/public/SHabee1QT1a327cf2b7abc2996d1b1657933?mode=embed" width="580" height="326" allowfullscreen scrolling="no" marginheight="0" marginwidth="0" frameborder="0"></iframe>
+        </div>
+        <div class="embed-container col-md-4">
+          <iframe src="https://myhub.autodesk360.com/ue2a9b90d/shares/public/SHabee1QT1a327cf2b7aa4ed9a9a5380c0c9?mode=embed" width="580" height="326" allowfullscreen scrolling="no" marginheight="0" marginwidth="0" frameborder="0"></iframe>
+        </div>
+        <div class="embed-container col-md-4">
+          <iframe src="https://myhub.autodesk360.com/ue2a9b90d/shares/public/SHabee1QT1a327cf2b7ae2c1650df7b50783?mode=embed" width="580" height="326" allowfullscreen scrolling="no" marginheight="0" marginwidth="0" frameborder="0"></iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 
   <!-- /.box-image -->
 
