--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -34,74 +34,92 @@
         <mat-tab-group>
           <mat-tab label="Datos de Contacto">
             <p class="lead"></p>
-            <p class="text-muted">Manten tus datos actualizados, usamos estos datos para poder contactarte y generar la cotizacion.</p>
+            <p class="text-muted">Mantén tus datos actualizados, usamos estos datos para poder contactarle y generar la cotización.</p>
             <form [formGroup]="userForm" (ngSubmit)="updateUser(userForm)">
-              <div class="col-xs-12">
-                <h4>Información General</h4>
-                <hr>
-              </div>
-              <div class="col-xs-12 col-sm-6">
-                <div class="form-group">
-                  <label for="firstname">Primer Nombre</label>
-                  <input type="text" class="form-control" formControlName="firstName" id="firstname">
-                </div>
-              </div>
-              <div class="col-xs-12 col-sm-6">
-                <div class="form-group">
-                  <label for="lastname">Primer Apellido</label>
-                  <input type="text" class="form-control" formControlName="lastName" id="lastname">
-                </div>
-              </div>
-              <div class="col-xs-12 col-sm-6">
-                <div class="form-group">
-                  <label for="lastname">Documento</label>
-                  <input type="text" class="form-control" formControlName="document" id="lastname">
-                </div>
-              </div>
-              <div class="col-xs-12 col-sm-6">
-                <div class="form-group">
-                  <label for="street">Correo Electrónico</label>
-                  <input type="text" class="form-control" formControlName="email" id="email">
-                </div>
-              </div>
-              <div class="col-xs-12 col-sm-6">
-                <div class="form-group">
-                  <label for="city">Teléfono</label>
-                  <input type="text" class="form-control" formControlName="phone" id="phone">
-                </div>
-              </div>
-              <div class="col-xs-12 col-sm-6">
-                <div class="form-group">
-                  <label for="zip">Dirección</label>
-                  <input type="text" class="form-control" formControlName="address" id="address">
-                </div>
-              </div>
-              <div class="col-xs-12">
-                <h4>Información de Empresa</h4>
-                <hr>
-              </div>
-              <div class="col-xs-12 col-sm-6">
-                <div class="form-group">
-                  <label for="state">Empresa</label>
-                  <input type="text" class="form-control" formControlName="enterprise" id="entreprise">
-                </div>
-              </div>
-              <div class="col-xs-12 col-sm-6">
-                <div class="form-group">
-                  <label for="country">NIT</label>
-                  <input type="text" class="form-control" formControlName="nit" id="nit">
-                </div>
-              </div>
-              <div class="col-xs-12 col-sm-6">
-                <div class="form-group">
-                  <label for="phone">Rol en la compañia</label>
-                  <input type="text" class="form-control" formControlName="role" id="role">
-                </div>
-              </div>
-              <div class="col-sm-12 text-center">
-                <button type="submit" class="btn btn-template-main"><i class="fa fa-save"></i> Guardar Cambios</button>
-              </div>
-              <div class="clearfix"></div>
+              <mat-accordion>
+                <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+                  <mat-expansion-panel-header>
+                    <mat-panel-title>
+                      <b>Datos personales</b>
+                    </mat-panel-title>
+                    <mat-panel-description>
+                      {{panelOpenState ? ' ' : 'Click para desplegar datos.'}}
+                    </mat-panel-description>
+                  </mat-expansion-panel-header>
+
+                  <table class="col-md-12 personalData" frame="void" rules="rows">
+                    <tr>
+                      <td class="col-md-6">
+                        <b>Nombres</b>
+                      </td>
+                      <td>{{user.firstName}}</td>
+                    </tr>
+                    <tr>
+                      <td class="col-md-6">
+                        <b>Apellidos</b>
+                      </td>
+                      <td>{{user.lastName}}</td>
+                    </tr>
+                    <tr>
+                      <td class="col-md-6">
+                        <b>Documento</b>
+                      </td>
+                      <td>{{user.document}}</td>
+                    </tr>
+                    <tr>
+                      <td class="col-md-6">
+                        <b>Correo Electrónico</b>
+                      </td>
+                      <td>{{user.uid}}</td>
+                    </tr>
+                    <tr>
+                      <td class="col-md-6">
+                        <b>Télefono</b>
+                      </td>
+                      <td>{{user.phone}}</td>
+                    </tr>
+                    <tr>
+                      <td class="col-md-6">
+                        <b>Dirección</b>
+                      </td>
+                      <td>{{user.address}}</td>
+                    </tr>
+
+                  </table>
+                </mat-expansion-panel>
+                <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+                  <mat-expansion-panel-header>
+                    <mat-panel-title>
+                      <b>Datos Empresariales</b>
+                    </mat-panel-title>
+                    <mat-panel-description>
+                      {{panelOpenState ? ' ' : 'Click para desplegar datos.'}}
+                    </mat-panel-description>
+                  </mat-expansion-panel-header>
+                  <table class="col-md-12 personalData" frame="void" rules="rows">
+                    <tr>
+                      <td class="col-md-6">
+                        <b>Empresa</b>
+                      </td>
+                      <td>{{user.enterprise}}</td>
+                    </tr>
+                    <tr>
+                      <td class="col-md-6">
+                        <b>NIT</b>
+                      </td>
+                      <td>{{user.nit}}</td>
+                    </tr>
+
+                    <tr>
+                      <td class="col-md-6">
+                        <b>Rol en la compañia</b>
+                      </td>
+                      <td>{{user.role}}</td>
+                    </tr>
+
+                  </table>
+                </mat-expansion-panel>
+              </mat-accordion>
             </form>
           </mat-tab>
 
