--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -83,8 +83,12 @@
                 <div class="row">
                   <div class="col-xs-12 col-sm-6">
                     <div class="form-group">
-                      <label for="document">Documento de identidad</label>
+                      <label for="document">Documento de identidad<sup><i class="text-danger fa fa-asterisk"></i></sup></label>
                       <input type="text" class="form-control" id="document" formControlName="document">
+                      <div class="alert alert-danger alert-sm border-flat" *ngIf="registerForm.controls.document.dirty">
+
+                        <span class="fa fa-exclamation"></span> Oops, este campo es requerido!
+                      </div>
                     </div>
                   </div>
                   <div class="col-xs-12 col-sm-6">
