--- a/src/app/pages/quotation/quotation.component.css
+++ b/src/app/pages/quotation/quotation.component.css
@@ -21,3 +21,22 @@
 .map {
   height: 300px !important;
 }
+
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-container > * {
+  width: 100%;
+}
+
+.example-right-align {
+  text-align: right;
+}
+
+input.example-right-align::-webkit-outer-spin-button,
+input.example-right-align::-webkit-inner-spin-button {
+  display: none;
+}
