--- a/src/app/pages/quotation/quotation.component.html
+++ b/src/app/pages/quotation/quotation.component.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-10 col-sm-offset-1">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
   <h1 class="page-header">Formulario De Cotización  </h1>
   <p class="lead mb-small">Llegaste al lugar correcto!</p>
   <p class="text-justify">
@@ -172,28 +172,40 @@
                   <div *ngFor="let property of selectedProduct.properties">
                     <div class="clearfix" *ngIf="property.type === 'bool'"></div>
                     <div class="col-xs-12 col-sm-6">
+                    <div class="form-container">
                       <mat-form-field class="full-width" *ngIf="property.type === 'integer' || property.type === 'list'">
-                        <input matInput class="full-width" *ngIf="property.type === 'integer' && property.name != 'Exposicion_Aletas'" [formControlName]="property.name" type="number" [placeholder]="property.name" [min]="property.values[0]" [max]="property.values[1]" (change)="updateDraw(selectedProduct.name, property.name)"
+
+                        <input class="example-right-align" matInput class="full-width" *ngIf="property.type === 'integer' && property.name != 'Exposicion_Aletas'" [formControlName]="property.name" type="number" [placeholder]="formatPlaceHolderForm(property)" [min]="property.values[0]" [max]="property.values[1]" (change)="updateDraw(selectedProduct.name, property.name)" 
                         />
-                        <mat-select *ngIf="property.type === 'list' && property.name != 'Exposicion_Aletas'" [formControlName]="property.name" [placeholder]="property.name" [(value)]="property.value" (change)="updateDraw(selectedProduct.name, property.name)">
+                        <span matSuffix *ngIf="property.type === 'integer' && property.name != 'Exposicion_Aletas'">
+                        {{formatSuffixForm(property)}}
+                        </span>
+                        <mat-select *ngIf="property.type === 'list' && property.name != 'Exposicion_Aletas'" [formControlName]="property.name" [placeholder]="formatPropertyName(property.name)" [(value)]="property.value" (change)="updateDraw(selectedProduct.name, property.name)">
                           <mat-option *ngFor="let option of property.values" [value]="option">
                             {{ option.name }}
                           </mat-option>
                         </mat-select>
 
-                        <mat-select *ngIf="property.name == 'Exposicion_Aletas'" [formControlName]="property.name" [placeholder]="property.name" [(value)]="property.value" (change)="updateDraw(selectedProduct.name, property.name)">
+                        <mat-select *ngIf="property.name == 'Exposicion_Aletas'" [formControlName]="property.name" [placeholder]="formatPropertyName(property.name)" [(value)]="property.value" (change)="updateDraw(selectedProduct.name, property.name)">
                               <mat-option value="1">10 cm</mat-option>
                               <mat-option value="2">15 cm</mat-option>
                               <mat-option value="3">20 cm</mat-option>
-                        </mat-select>
-
-
+                        </mat-select>      
 
                       </mat-form-field>
 
+                    </div>
+
+
                       <mat-slide-toggle color="primary" class="full-width" [formControlName]="property.name" *ngIf="property.type === 'bool'">
-                        {{ property.name }}
+                        {{ formatPropertyName(property.name) }}
                       </mat-slide-toggle>
+                      <mat-error *ngIf="property.type === 'integer' && productForm.controls[property.name].hasError('min')">
+                           <span class="fa fa-exclamation-triangle"></span> El valor mínimo es: {{property.values[0]}}{{formatSuffixForm(property)}}
+                       </mat-error>
+                      <mat-error *ngIf="property.type === 'integer' && productForm.controls[property.name].hasError('max')">
+                           <span class="fa fa-exclamation-triangle"></span> El valor máximo es: {{property.values[1]}}{{formatSuffixForm(property)}}
+                       </mat-error>
                     </div>
                   </div>
                 </form>
