Fix draw-muelle and fix colors in all canvas

--- a/src/app/pages/quotation/draw-muelle/draw-muelle.component.html
+++ b/src/app/pages/quotation/draw-muelle/draw-muelle.component.html
@@ -41,7 +41,18 @@
       <ngvas-rectangle  [fill]="lonaFill" [x]="lonaX" [y]="lonaY" [width]="lonaWidth" [height]="lonaHeight" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle> 
       <ngvas-rectangle  [fill]="lonaFill" [x]="extraLonaX" [y]="extraLonaY" [width]="extraLonaWidth" [height]="extraLonaHeight" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle> 
 
+
+
+
+
+      <ngvas-image fill="rgba(0,0,0,0)" [x]="imageAngle_no_10_X" [y]="imageAngle_no_10_Y" [width]="imageAngleWidth" [height]="imageAngleHeight" src="assets/img/sellos_para_muelles_de_carga/sello_angulo_no_10.png"></ngvas-image>
+      <ngvas-image [visible]="imageAngle_0_visibility" fill="rgba(0,0,0,0)" [x]="imageAngle_0_X" [y]="imageAngle_0_Y" [width]="imageAngleWidth" [height]="imageAngleHeight" src="assets/img/sellos_para_muelles_de_carga/sello_angulo_0.png"></ngvas-image>
+      <ngvas-image fill="rgba(0,0,0,0)" [x]="imageAngle_10_X" [y]="imageAngle_10_Y" [width]="imageAngleWidth" [height]="imageAngleHeight" src="assets/img/sellos_para_muelles_de_carga/sello_angulo_10.png"></ngvas-image>
+
       <ngvas-rectangle  [stroke]="{ width: strokeWidth, style: strokeColor }" [rotation]="angleShapeRotation" [fill]="outlineFill" [x]="angleShapeX" [y]="angleShapeY" [width]="angleShapeWidth" [height]="angleShapeHeight" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
-      <ngvas-rectangle  [stroke]="{ width: strokeWidth, style: strokeColor }" [rotation]="angleShapeRotation" [fill]="outlineFill" [x]="angleShapeX" [y]="angleShapeY" [width]="angleShapeWidth" [height]="angleShapeHeight" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
-      <ngvas-text [fill]="textFill" [textStyle]="{ font: '30px Arial' }"    [x]="textAngleX" [y]="textAngleY" [text]="angleShapeText"></ngvas-text>      
+      <ngvas-text [fill]="textFill" [textStyle]="{ font: '30px Arial' }"    [x]="textAngleX" [y]="textAngleY" [text]="angleShapeText"></ngvas-text>
+
     </ngvas>
+
+
+
