Style draws - fix bug in quotation

--- a/src/app/pages/quotation/draw-door/draw-door.component.html
+++ b/src/app/pages/quotation/draw-door/draw-door.component.html
@@ -1,7 +1,34 @@
 
 
 
-<h1>Puerta </h1>
+<h1>Puerta rápida</h1>
+<div class="row vertical_center_col">
+<div class="col-sm-3 text-center">
+
+    		<h6>Mando a Distancia</h6>
+         <img src="assets/img/puerta_rapida_enrollable/Mando a Distancia.gif" alt="" class="img-responsive">
+  
+    	<h6>Interruptor de Tirador</h6>	
+         <img src="assets/img/puerta_rapida_enrollable/Interruptor de Tirador.gif" alt="" class="img-responsive">
+
+    		<h6>Lazo Magnético</h6>
+         <img src="assets/img/puerta_rapida_enrollable/Lazo Magnético.gif" alt="" class="img-responsive">
+ 
+
+
+</div>
+<div class="col-sm-3 text-center">
+
+ 
+    		<h6>Luces de Aviso</h6>
+         <img src="assets/img/puerta_rapida_enrollable/Luces de Aviso.jpg" alt="" class="img-responsive">
+
+    		<h6>Señal Acústica</h6>
+         <img src="assets/img/puerta_rapida_enrollable/Señal Acústica.png" alt="" class="img-responsive">
+
+
+</div>
+<div class="col-sm-6 text-center">
     <ngvas [width]="canvasWidth" [height]="canvasHeight" >
 
 
@@ -16,3 +43,7 @@
       <ngvas-rectangle [stroke]="{ width: strokeWidth, style: strokeColor }" [fill]="dividerFill" [x]="divider_3_X" [y]="divider_3_Y" [width]="dividerWidth" [height]="dividerHeight" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
 
     </ngvas>
+    </div>
+
+
+</div>
