--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -141,7 +141,7 @@ _________________________________________________________ -->
           </div>
         </div>
         <div class="item">
-          <img class="size-image " src="http://codig0latino.com/wp-content/uploads/2015/09/Python-3-4-0-Beta-2-Now-Available-for-Download-417591-21.png " alt="Second Slide " max-width="400px">
+          <img class="size-image " src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/2000px-Python-logo-notext.svg.png " alt="Second Slide " max-width="400px">
           <div class="carousel-caption ">
             <h3>El lenguaje de programación simple y libre.</h3>
           </div>
