--- a/src/app/pages/products/legos/legos.component.html
+++ b/src/app/pages/products/legos/legos.component.html
@@ -92,7 +92,7 @@
       <div class="col-sm-4">
         <div class="box-image">
           <div class="image">
-            <img src="https://trello-attachments.s3.amazonaws.com/59c180c9df975fa33b73f7aa/59f98f07324c8361d67aad07/e839849b7238227e6151e853e2bfc97f/3.jpg" alt="Transportes en el mar" class="img-responsive">
+            <img src="assets/img/lego_3.png" alt="Transportes en el mar" class="img-responsive">
           </div>
           <div class="bg"></div>
           <div class="name">
