--- a/src/app/partials/footer/footer.component.html
+++ b/src/app/partials/footer/footer.component.html
@@ -55,8 +55,7 @@ _________________________________________________________ -->
   <div class="container">
     <div class="col-md-12">
       <p class="pull-left">&copy; 2017. Computación Gráfica</p>
-      <p class="pull-right">Diseñado por <a href="http://eccarrilloe.github.io" target="_blank">Web Team</a>
-      </p>
+      <p class="pull-right">Diseñado por <Strong>Web Team</Strong></p>
     </div>
   </div>
 </div>
