--- a/src/app/pages/products/doors/doors.component.html
+++ b/src/app/pages/products/doors/doors.component.html
@@ -1,12 +1,11 @@
 <!-- Nav tabs -->
 <div class="card	">
   <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#sello_muelle" aria-controls="sello_muelle" role="tab" data-toggle="tab">Sellos para Muelle de carga</a>
+    <li role="presentation" class="active"><a href="#sello_muelle" aria-controls="sello_muelle" role="tab" data-toggle="tab">Sellos para Muelles de carga</a>
     </li>
     <li role="presentation"><a href="#puerta_rapida" aria-controls="puerta_rapida" role="tab" data-toggle="tab">Puerta Rápida Enrollable</a></li>
-    <!--
-        <li role="presentation"><a href="#abrigo_muelle" aria-controls="abrigo_muelle" role="tab" data-toggle="tab">Abrigos para Muelle de carga</a></li>
-        -->
+    <li role="presentation"><a href="#abrigo_muelle" aria-controls="abrigo_muelle" role="tab" data-toggle="tab">Abrigos para Muelles de carga</a></li>
+
   </ul>
   <!-- Tab panes -->
   <div class="tab-content">
@@ -221,7 +220,7 @@
                   <li><strong style="font-size: 30px">■ &nbsp; Peso: </strong> &nbsp;900g/m2</li>
                   <br>
                   <li><strong style="font-size: 30px">■ &nbsp; Resistencia al Rasgado: </strong> &nbsp;(Largo) 34 kg/cm - (Ancho) 34 kg/cm
- </li>
+          </li>
                   <br>
                   <li><strong style="font-size: 30px">■ &nbsp; Elongación: </strong> &nbsp;28%</li>               
                 </ul>
@@ -408,14 +407,14 @@
                   <li><strong style="font-size: 30px">■ &nbsp; Mando a Distancia: </strong> &nbsp;Capacidad de 15 mandos por puerta a una distancia máx de 152 m</li>
                   <br>
                   <li><strong style="font-size: 30px">■ &nbsp; Fotocélulas: </strong> &nbsp;La puerta se abre cuando se interrumpe el haz de las fotocélulas, situadas frente a la puerta.
- </li>
+        </li>
                   <br>
                   <li><strong style="font-size: 30px">■ &nbsp;Apertura / Cierre parcial: </strong> &nbsp;(Apertura parcial para paso peatonal y apertura completa para paso de maquinaria y/o mercancía)</li>
                   <br>
                   <li><strong style="font-size: 30px">■ &nbsp;Apertura / Cierre mientras se mantiene el pulsador</strong></li>
                   <br>
                   <li><strong style="font-size: 30px">■ &nbsp; Luces de Aviso: </strong> &nbsp;Indica el estado actual de la puerta, dependiendo del color y permanencia de la luz (intermitencia o no)
- </li>
+        </li>
                   <br>
                   <li><strong style="font-size: 30px">■ &nbsp;Señal Acústica : </strong> &nbsp;Se emite un sonido durante el movimiento de la puerta.</li>                
                 </ul>
@@ -461,7 +460,7 @@
                   <li><strong style="font-size: 30px">■ &nbsp; Vida Útil:  </strong> &nbsp;1 000 000 de ciclos.</li>
                   <br>
                   <li><strong style="font-size: 30px">■ &nbsp; Material Lona:  </strong> &nbsp; Resina Plástica de PVC
- </li>
+        </li>
                   <br>
                   <li><strong style="font-size: 30px">■ &nbsp; Peso Lona: </strong> &nbsp;900g/m2</li>
                   <br>
@@ -470,7 +469,7 @@
                   <li><strong style="font-size: 30px">■ &nbsp; Elongación:</strong> &nbsp;28%</li>
                   <br>
                   <li><strong style="font-size: 30px">■ &nbsp;Material Transparente:  </strong> &nbsp; 100% Polyester
- </li>
+        </li>
                   <br>
                   <li><strong style="font-size: 30px">■ &nbsp; Peso:  </strong> &nbsp; 115g/m2li>
                   <br>
@@ -479,7 +478,7 @@
                   <li><strong style="font-size: 30px">■ &nbsp; Elongación:  </strong> &nbsp; 32%</li>
                   <br>
                   <li><strong style="font-size: 30px">■ &nbsp; Motor:  </strong> &nbsp;  220 VAC - 3 PH - 60 Hz
- </li>
+      </li>
                   <br>
                   <li><strong style="font-size: 30px">■ &nbsp; Sensores:  </strong> &nbsp;12 - 24 VDC</li>                                
                 </ul>
@@ -491,8 +490,243 @@
       </section>
     </div>
     <div role="tabpanel" class="tab-pane" id="abrigo_muelle">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
-      survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passage..
+      <section class="no-mb">
+        <div class="jumbotron">
+          <div class="dark-mask"></div>
+          <div class="container">
+            <div class="row mb-small">
+              <div class="col-sm-12 text-center">
+                <h1>ABRIGOS PARA MUELLES DE CARGA</h1>
+              </div>
+            </div>
+            <div class="row vertical_center_col">
+              <div class="col-md-6 text-center">
+                <img src="assets/img/abrigos_para_muelles_de_carga/abrigos_para_muelles_de_carga_0.png" alt="" class="img-responsive">
+              </div>
+              <div class="col-md-6">
+                <h2 class="text-uppercase">¿Por qué usarlo?</h2>
+                <p class="mb-small">Diseñados para garantizar el mayor aislamiento y separación de ambientes en el proceso de cargue y descargue en muelles de carga; en cuanto a la intemperie, el interior del área de trabajo y la mercancía. Se acoplan a las distintas dimensiones de camiones y contenedores de carga.</p>
+                <br>
+                <p class="mb-small">Los Abrigos para muelle son elementos básicos y de gran utilidad en los patios de maniobra. Éstos se pueden instalar en centros de distribución nuevos o adaptar en las plantas existentes.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="no-mb">
+        <div class="jumbotron">
+          <div class="dark-mask custom_dark_mask"></div>
+          <div class="container">
+            <div class="row vertical_center_col">
+              <div class="col-sm-12 text-center">
+                <h1 class="text-uppercase">BENEFICIOS</h1>
+              </div>
+              </div>
+              <div class="row vertical_center_col">
+              <div class="col-md-6">
+                <ul type="none" class="list_custom" >
+                  <li> ■ &nbsp;   Evitan fugas de temperatura, entrada de aire, agua, polvo, insectos, etc.</li>
+                  <br>
+                  <li> ■ &nbsp;  Son útiles para proteger y reducir hurto durante la carga y descarga de materiales o productos. </li>
+                  <br>
+                </ul>
+              </div>
+              <div class="col-md-6">
+                <ul type="none" class="list_custom" >
+                  <li> ■ &nbsp;  Reduce las pérdidas energéticas gracias a la separación efectiva de ambientes. </li>
+                  <br>
+                  <li> ■ &nbsp;  Protege el producto y al personal de condiciones ambientales. </li>
+                  <br>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="no-mb">
+        <div class="jumbotron">
+          <div class="dark-mask"></div>
+          <div class="container">
+          <div class="row vertical_center_col">
+              <div class="col-sm-12 text-center">
+                <h1 class="text-uppercase">PARTES</h1>
+              </div>
+              </div>
+            <div class="row vertical_center_col">
+
+              <div class="col-md-6">
+                <ul type="none" class="list_custom"  >
+                  <li> ■ &nbsp;  (1) Lona Superior </li>
+                  <br>
+                  <li> ■ &nbsp;  (2) Lonas Laterales (Parte superior) </li>
+                  <br>
+                  <li> ■ &nbsp;  (3) Bandas verticales para guía en el aparcamiento </li>
+                  <br>
+                  <li> ■ &nbsp; (4) Lona flexible envolvente </li>
+                  <br>
+                  <li> ■ &nbsp; (5) Estructura perimetral con perfiles galvanizados </li>
+                  <br>
+                </ul>
+              </div>
+                            <div class="col-md-6 text-center">
+                <img src="assets/img/abrigos_para_muelles_de_carga/abrigos_para_muelles_de_carga_1.png" alt="" class="img-responsive">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="no-mb">
+        <div class="jumbotron">
+          <div class="dark-mask custom_dark_mask"></div>
+          <div class="container">
+          <div class="row vertical_center_col">
+              <div class="col-sm-12 text-center">
+                <h1 class="text-uppercase">INCLINACIÓN PARA EVACUACIÓN DE AGUA 
+                </h1>
+              </div>
+              </div>
+            <div class="row vertical_center_col">
+                              <div class="col-md-6 text-center">
+                <img src="assets/img/abrigos_para_muelles_de_carga/abrigos_para_muelles_de_carga_2.png" alt="" class="img-responsive">
+              </div>
+              <div class="col-md-6">
+                <p class="mb-small">La estructura de cada abrigo cuenta con una inclinación en la parte superior, para facilitar la evacuación del agua en caso de lluvia.</p>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="no-mb">
+        <div class="jumbotron">
+          <div class="dark-mask"></div>
+          <div class="container">
+            <div class="row vertical_center_col">
+              <div class="col-sm-12 text-center">
+                <h1 class="text-uppercase">SISTEMA RETRÁCTIL</h1>
+                <p class="mb-small">Los abrigos para muelles de carga poseen un sistema retráctil, que permite flexibilidad en las maniobras de carga y descarga, protegiendo así las instalaciones del muelle y el propio abrigo si se ejerce presión por parte de los vehículos de diferentes dimensiones.</p>
+                <br>
+                <p class="mb-small">Al retirarse el vehículo, luego de terminada la operación en el muelle, el abrigo volverá a su posición original.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="no-mb">
+        <div class="jumbotron">
+          <div class="dark-mask custom_dark_mask"></div>
+          <div class="container">
+          <div class="row vertical_center_col">
+              <div class="col-sm-12 text-center">
+                <h1 class="text-uppercase">ESTRUCTURA</h1>
+              </div>
+              </div>
+            <div class="row vertical_center_col">
+              <div class="col-md-6">
+                <p class="mb-small">La estructura perimetral del abrigo es fabricada con acero galvanizado y acabados en pintura electrostática, para brindar protección ante  a corrosión en la intemperie.</p>
+              </div>
+              <div class="col-md-6 text-center">
+                <img src="assets/img/abrigos_para_muelles_de_carga/abrigos_para_muelles_de_carga_3.png" alt="" class="img-responsive">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="no-mb">
+        <div class="jumbotron">
+          <div class="dark-mask "></div>
+          <div class="container">
+          <div class="row vertical_center_col">
+              <div class="col-sm-12 text-center">
+                <h1 class="text-uppercase">CARACTERÍSTICAS TÉCNICAS DE LA LONA</h1>
+              </div>
+              </div>
+            <div class="row vertical_center_col">
+              <div class="col-md-12 text-center">
+                <ul type="none" class="list_custom">
+                  <li><strong style="font-size: 30px">■ &nbsp; Material Lona:</strong> &nbsp; Resina Plástica de PVC </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Peso: </strong> &nbsp;900g/m2</li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Resistencia al Rasgado: </strong> &nbsp;(Largo) 34 kg/cm - (Ancho) 34 kg/cm
+          </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Elongación: </strong> &nbsp;28%</li>               
+                </ul>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="no-mb">
+        <div class="jumbotron">
+          <div class="dark-mask custom_dark_mask"></div>
+          <div class="container">
+            <div class="row vertical_center_col">
+              <div class="col-sm-12 text-center">
+                <h1 class="text-uppercase">GAMA DE COLORES</h1>
+                <p class="mb-small">La fabricación de los abrigos se realiza con cada combinación posible que se desee, para la estructura perimetral y la lona.</p>
+              </div>
+            </div>
+            <div class="row vertical_center_col">
+              <div class="col-md-12 text-center">
+                <img src="assets/img/abrigos_para_muelles_de_carga/abrigos_para_muelles_de_carga_4.png" alt="" class="img-responsive">
+                <br>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- *** JUMBOTRON END *** -->
+      </section>
+      <section class="no-mb">
+        <div class="jumbotron">
+          <div class="dark-mask "></div>
+          <div class="container">
+          <div class="row vertical_center_col">
+              <div class="col-sm-12 text-center">
+                <h1 class="text-uppercase">CARACTERÍSTICAS TÉCNICAS DE LA LONA</h1>
+              </div>
+              </div>
+            <div class="row vertical_center_col">
+              <div class="col-md-12 text-center">
+                <ul type="none" class="list_custom">
+                  <li><strong style="font-size: 30px">■ &nbsp; Aplicación: </strong> &nbsp;  Interior y exterior.</li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; DIMENSIONES ESTANDAR*:</strong><br>ALTO x ANCHO (H x W): <br> * 3.2m x 3.2 <br> * 3.4m x 3.2m <br> * 3.4m x 3.4m </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; LONA SUPERIOR (A): </strong> &nbsp;1m
+                 </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; LONAS LATERALES (B): </strong> &nbsp;0.6m
+                 </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; PROYECCIÓN (C):  </strong> &nbsp;0.7m
+                 </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Elongación: </strong> &nbsp;28%</li>
+                  <br>
+                  <li><strong style="font-size: 40px">LONA</strong></li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Material Lona:  </strong> &nbsp;   Resina Plástica de PVC</li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Peso:  </strong> &nbsp;   900g/m2</li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Resistencia al Rasgado: </strong> &nbsp;   (Largo) 34 kg/cm - (Ancho) 34 kg/cm</li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Elongación:  </strong> &nbsp; 28%</li>
+                  <br>
+
+                  <li><strong style="font-size: 40px">■ &nbsp; ESTRUCTURA</strong> <br> La estructura interna de los abrigos está fabricada en pefiles de acero galvanizado de calibre 16. La estructura perimetral exterior, del mismo material, tiene  cabado en pintura electrostática.</li>
+                  <br>
+                  <br>               
+                </ul>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </div>
 </div>
